python-test_driven_development/tests/4-print_square.txt
--------------------------------------------------
#doctest 4-print_square
--------------------------------------------------
#Check if size is correct parameter for this function :

>>> print_square = __import__('4-print_square').print_square

>>> print_square(1)
#

>>> print_square(2)
##
##

>>> print_square(4)
####
####
####
####

===================================================

# Error :

>>> print_square(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/workspaces/holbertonschool/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 13, in print_square
    raise ValueError("size must be >= 0")
ValueError: size must be >= 0

>>> print_square('a')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/workspaces/holbertonschool/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 11, in print_square
    raise TypeError("size must be an integer")
TypeError: size must be an integer

>>> print_square(2.0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/workspaces/holbertonschool/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 11, in print_square
    raise TypeError("size must be an integer")
TypeError: size must be an integer

>>> print_square("youpi")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/workspaces/holbertonschool/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 11, in print_square
    raise TypeError("size must be an integer")
TypeError: size must be an integer

>>> print_square(None)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/workspaces/holbertonschool/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 11, in print_square
    raise TypeError("size must be an integer")
TypeError: size must be an integer

>>> print_square(45a)
  File "<stdin>", line 1
    print_square(45a)
                  ^
SyntaxError: invalid decimal literal
